fix:collection create show dialogs modal on mobile to improve layout feat:ui helper media queries for height

--- a/Frontend/src/app/modules/collections/collection-new/collection-new.component.scss
+++ b/Frontend/src/app/modules/collections/collection-new/collection-new.component.scss
@@ -446,7 +446,7 @@ input[type="radio"] {
 .blurred-image{
   display: none;
 }
-@media screen and (max-height: $mobileHeight + $mobileStage*1){
+@media screen and (max-height: $mobileHeight + $mobileStage*2){
   .card, .card-high, .card-low {
     top:$mainnavHeight+15px;
   }
